--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Patients#index</h1>
-<p>Find me in app/views/patients/index.html.erb</p>
+
+<% if @patients.empty? %>
+  <div>
+    There are no test patients to demonstrate, please create one using the button below.
+  </div>
+<% else %>
+  Test Patients
+  <% @patients.each do |p| %>
+    <%= link_to p.details, patient_path(p), class: "btn" %>
+  <% end %>
+<% end %>
+
+<%= link_to "Create New Test Patient", new_patient_path, class: "btn new"%>
