--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -17,7 +17,7 @@ border-box;
 
 /* universal */
 body {
-  padding-top: 60px;
+  padding-top: 90px;
 }
 section {
 overflow: auto;
@@ -64,7 +64,7 @@ line-height: 1.7em;
 .headicon {
   height: 6rem;
   float: left;
-  margin-right: 10px;
+  margin: 10px;
 }
 
 /* forms */
@@ -91,6 +91,57 @@ margin: 0 0 30px 0;
 color: $state-danger-text;
 }
 }
+
+/* reusable layouts */
+
+.vertical-align {
+    display: flex;
+    align-items: center;
+}
+
+.listbox{
+  margin: 2rem;
+  padding: 2rem;
+  border: .2rem solid $gray-medium-light;
+  border-radius: 2rem;
+}
+
+.listbox-title{
+  font-weight: bold;
+}
+
+.listbox-middle{
+  margin-top: .5rem;
+  margin-bottom: .5rem;
+}
+
+.listbox-footer{
+  margin-right: 1rem;
+  margin-left: 1rem;
+  margin-top: .5rem;
+  border-top: .1rem solid $gray-medium-light;
+  padding-top: 2rem
+}
+
+
+.respectarea{
+  border: .1px solid #927cb8;
+  border-radius: 1rem;
+}
+
+.card{
+  border: 2px black;
+}
+
+.icon{
+  height: 4rem;
+}
+
+.respectplus{
+  height: 48px;
+  margin-top: -1rem;
+}
+
 
 
 /* select patient page */
