--- a/app/views/consultants/new.html.erb
+++ b/app/views/consultants/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Test Patient</h1>
+<h1>New Consultant</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for @consultant, local: true do |f| %>
